--- a/plus-ui-ts/index.html
+++ b/plus-ui-ts/index.html
@@ -6,6 +6,12 @@
     <meta name="renderer" content="webkit" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="icon" href="/favicon.ico" />
+
+    <!-- vod上传文件 -->
+    <script src="/js/aliyun-oss-sdk-6.17.1.min.js"></script>
+    <script src="/js/aliyun-upload-sdk-1.5.6.min.js"></script>
+    <script src="/js/es6-promise.min.js"></script>
+
     <title>RuoYi-Vue-Plus多租户管理系统</title>
     <!--[if lt IE 11
       ]><script>
