--- a/plus-ui-ts/index.html
+++ b/plus-ui-ts/index.html
@@ -11,6 +11,7 @@
     <script src="/js/aliyun-oss-sdk-6.17.1.min.js"></script>
     <script src="/js/aliyun-upload-sdk-1.5.6.min.js"></script>
     <script src="/js/es6-promise.min.js"></script>
+    <script src="/js/enums.js"></script>
 
     <title>RuoYi-Vue-Plus多租户管理系统</title>
     <!--[if lt IE 11
